syntax = "proto3";
package proto.games;

import "proto/engine/engine.proto";

option go_package = "github.com/laerson/mancala/proto/games;gamespb";

message Game {
    string id = 1;
    proto.engine.GameState state = 2;
    string player1_id = 3;
    string player2_id = 4;
}

message CreateGameRequest {
    string player1_id = 1;
    string player2_id = 2;
}

message CreateGameResponse {
    Game game = 1;
}

message MakeGameMoveRequest {
    string player_id = 1;
    string game_id = 2;
    uint32 pit_index = 3;
}

message MakeGameMoveResponse {
    oneof result {
        proto.engine.MoveResult move_result = 1;
        Error error = 2;
    }
}

message Error {
    string message = 1;
}

service Games {
    rpc Create(CreateGameRequest) returns (CreateGameResponse);
    rpc Move(MakeGameMoveRequest) returns (MakeGameMoveResponse);
}